--- a/minio-standalone-pvc.yaml
+++ b/minio-standalone-pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: minio-pv-claim
   labels:
     app: minio-storage-claim
-
+  namespace: minio
 spec:
   accessModes:
     - ReadWriteOnce
