--- a/minio-standalone-deployment.yaml
+++ b/minio-standalone-deployment.yaml
@@ -33,6 +33,8 @@ spec:
           value: "minio"
         - name: MINIO_ROOT_PASSWORD
           value: "minio123"
+        - name: CONSOLE_SECURE_TLS_REDIRECT
+          value: off
         ports:
         - containerPort: 9000
           hostPort: 9000
