--- a/minio-standalone-deployment.yaml
+++ b/minio-standalone-deployment.yaml
@@ -33,7 +33,8 @@ spec:
           value: "minio"
         - name: MINIO_ROOT_PASSWORD
           value: "minio123"
-        - CONSOLE_SECURE_TLS_REDIRECT=off
+        - name: CONSOLE_SECURE_TLS_REDIRECT
+          value: "false"
         ports:
         - containerPort: 9000
           hostPort: 9000
